stop button + fix for unread count

--- a/FastNews/FastNews/MainPage.xaml
+++ b/FastNews/FastNews/MainPage.xaml
@@ -7,9 +7,21 @@
 
 
         <Frame BackgroundColor="#2196F3" Padding="24" CornerRadius="0">
-                <Label Text="Welcome to Fast News. Here you can be always up to date in under a minute!" HorizontalTextAlignment="Center" TextColor="White" FontSize="36"/>
+                <Label Text="Welcome to Fast News. Here you can be always up to date in under a minute!" HorizontalTextAlignment="Center" TextColor="White" FontSize="30"/>
             </Frame>
-            <Label Text="{Binding NewsText}" FontSize="Large" Padding="30,10,30,10" TextColor="{Binding TextColor}" HorizontalTextAlignment="Center"/>
+        <Frame Padding="24" CornerRadius="0" BorderColor="Orange">
+            <Label Text="{Binding NewsText}" FontSize="30" Padding="30,10,30,10" TextColor="{Binding TextColor}" HorizontalTextAlignment="Center"/>
+        </Frame>
+
+        <Frame BackgroundColor="Transparent">
+            <Button Text="STOP"
+                VerticalOptions="CenterAndExpand"
+                HorizontalOptions="Center"
+                Background="Red"
+                IsVisible="{Binding AreNewsCurrentlyDisplayed}"
+                Clicked="StopNews"/>
+        </Frame>
+
         <RefreshView IsRefreshing="{Binding IsRefreshing}"
              Command="{Binding RefreshCommand}">
             <ListView x:Name="listView"
@@ -23,7 +35,7 @@
                 </ListView.ItemTemplate>
             </ListView>
         </RefreshView>
-
+        
         <Entry x:Name="entry" Text="{Binding CustomTopicSearch}" Placeholder="Enter your custom topic" />
             <Button Text="Custom topic"
                 VerticalOptions="CenterAndExpand"
@@ -35,11 +47,13 @@
                 Maximum="200" 
                 Minimum="0"/>
 
-            <StackLayout Orientation="Horizontal"
-                         Spacing="15">
+            <StackLayout Orientation="Horizontal" Spacing="15">
                 <Label Text="Do not show already displayed news" HorizontalOptions="StartAndExpand"></Label>
                 <CheckBox IsChecked="{Binding FilterVisitedNews}" HorizontalOptions="End" HeightRequest="50"></CheckBox>
             </StackLayout>
+
+        
+
     </StackLayout>
 
 </ContentPage>
